--- a/public/index.html
+++ b/public/index.html
@@ -62,6 +62,7 @@
       <ul id="nav" class="nav">
         <li class="current"><a class="smoothscroll" href="#home">Home</a></li>
         <li><a class="smoothscroll" href="#about">About</a></li>
+        <li><a class="smoothscroll" href="#whatsnew"> What's New!</a></li>
         <li><a class="smoothscroll" href="#resume">Resume</a></li>
         <li><a class="smoothscroll" href="#testimonials"><i class="fa fa-linkedin"></i> Recommendations</a></li>
         <li><a class="smoothscroll" href="#contact">Contact</a></li>
@@ -152,6 +153,37 @@
 
   </section> <!-- About Section End-->
 
+    <!-- What's New
+   ================================================== -->
+   <section id="whatsnew">
+
+    <div class="row">
+
+      <div class="three columns">
+
+        <img class="profile-pic" src="images/whatsnew.jpg" alt="What's New" />
+
+      </div>
+
+      <div class="nine columns main-col">
+
+        <h2>What's New in Alan's World</h2>
+
+        <p>
+          {{ main.whatsnew1 }}
+        </p>
+        <p>
+          {{  main.whatsnew2 }}
+        </p>
+        <p>
+          {{  main.whatsnew3 }}
+        </p>
+
+      </div> <!-- end .main-col -->
+
+    </div>
+
+  </section> <!-- What's New End-->
 
   <!-- Resume Section
    ================================================== -->
